[package]
name = "holiday_api_rust"
version = "0.3.2"
authors = ["Guilherme Branco Stracini <guilherme@guilhermebranco.com.br>"]
edition = "2018"
description = "The Holiday API client wrapper."
repository = "https://github.com/guibranco/holiday-api-rust.git"
homepage = "https://github.com/guibranco/holiday-api-rust"
keywords = ["rest", "client", "holiday", "holiday-api"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"

[badges]
appveyor = { repository = "guibranco/holiday-api-rust", branch = "main", service = "github" }

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
log = "0.4"
