[package]
name = "holiday_api"
version = "1.0.0"
authors = ["Guilherme Branco Stracini <guilherme@guilhermebranco.com.br>"]
edition = "2021"
description = "The Holiday API client wrapper."
repository = "https://github.com/guibranco/holiday-api-sdk-rs.git"
homepage = "http://guilherme.stracini.com.br/holiday-api-sdk-rs"
keywords = ["rest", "client", "holiday", "holiday-api"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"

[dependencies]
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
prettytable-rs = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2"
